# backend-template

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: main.py  settings.py
app/api/routers/: ollama.py
app/api/views/: ollama.py
app/core/: ollama.py
kubernetes/: backend-deployment.yaml
